update refractor code

--- a/NLP/Bai1/Testing/transformer-test-vi2en.ipynb
+++ b/NLP/Bai1/Testing/transformer-test-vi2en.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bcaab7fa",
    "metadata": {
     "execution": {
@@ -20,36 +20,14 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting sacrebleu\r\n",
-      "  Downloading sacrebleu-2.5.1-py3-none-any.whl.metadata (51 kB)\r\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m51.8/51.8 kB\u001b[0m \u001b[31m1.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\r\n",
-      "\u001b[?25hCollecting portalocker (from sacrebleu)\r\n",
-      "  Downloading portalocker-3.2.0-py3-none-any.whl.metadata (8.7 kB)\r\n",
-      "Requirement already satisfied: regex in /usr/local/lib/python3.12/dist-packages (from sacrebleu) (2025.11.3)\r\n",
-      "Requirement already satisfied: tabulate>=0.8.9 in /usr/local/lib/python3.12/dist-packages (from sacrebleu) (0.9.0)\r\n",
-      "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.12/dist-packages (from sacrebleu) (2.0.2)\r\n",
-      "Requirement already satisfied: colorama in /usr/local/lib/python3.12/dist-packages (from sacrebleu) (0.4.6)\r\n",
-      "Requirement already satisfied: lxml in /usr/local/lib/python3.12/dist-packages (from sacrebleu) (5.4.0)\r\n",
-      "Downloading sacrebleu-2.5.1-py3-none-any.whl (104 kB)\r\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m104.1/104.1 kB\u001b[0m \u001b[31m4.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\r\n",
-      "\u001b[?25hDownloading portalocker-3.2.0-py3-none-any.whl (22 kB)\r\n",
-      "Installing collected packages: portalocker, sacrebleu\r\n",
-      "Successfully installed portalocker-3.2.0 sacrebleu-2.5.1\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install sacrebleu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4f32fb09",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -78,7 +56,7 @@
     "import math\n",
     "from tokenizers import Tokenizer\n",
     "# --- CẤU HÌNH ---\n",
-    "# 1. Hyperparams (Phải khớp 100% với lúc train model Small)\n",
+    "# 1. Hyperparams \n",
     "D_MODEL = 256\n",
     "N_HEAD = 4\n",
     "D_FF = 1024\n",
@@ -87,7 +65,7 @@
     "MAX_LEN = 256\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
-    "# 2. Đường dẫn (Sửa lại theo nơi bạn upload file lên)\n",
+    "# 2. Đường dẫn \n",
     "MODEL_PATH = \"/kaggle/input/transformer-training-vi2en/transformer_small_vi2en_v2.pt\"\n",
     "BPE_MODEL_PATH = \"/kaggle/input/tokenizer-iwslt/iwslt_bpe.model\"\n",
     "TEST_SRC_RAW = \"/kaggle/input/iwslt15-englishvietnamese/IWSLT'15 en-vi/tst2013.vi.txt\" # File text thô\n",
@@ -102,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8e9466a5",
    "metadata": {
     "execution": {
@@ -144,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "529b3864",
    "metadata": {
     "execution": {
@@ -224,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "242c8ea8",
    "metadata": {
     "execution": {
@@ -264,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "feb9bce1",
    "metadata": {
     "execution": {
@@ -314,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "181d0a4f",
    "metadata": {
     "execution": {
@@ -361,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e00bf670",
    "metadata": {
     "execution": {
@@ -390,7 +368,7 @@
     "        self.norm1 = nn.LayerNorm(d_model)\n",
     "        self.dropout1 = nn.Dropout(drop_prob)\n",
     "        \n",
-    "        # 2. Cross Attention (Quan trọng: Lấy Key, Value từ Encoder)\n",
+    "        # 2. Cross Attention \n",
     "        self.cross_attention = MultiHeadAttention(d_model, n_head)\n",
     "        self.norm2 = nn.LayerNorm(d_model)\n",
     "        self.dropout2 = nn.Dropout(drop_prob)\n",
@@ -436,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ae7dd7d6",
    "metadata": {
     "execution": {
@@ -486,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "2f69ef2d",
    "metadata": {
     "execution": {
@@ -558,7 +536,6 @@
     "        enc_src = self.encoder(src, src_mask)\n",
     "        \n",
     "        # 3. Chạy qua Decoder\n",
-    "        # Lưu ý: Decoder cần cả src_mask để tránh Cross-Attention nhìn vào padding của src\n",
     "        output = self.decoder(trg, enc_src, trg_mask, src_mask)\n",
     "        \n",
     "        return output"
@@ -566,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "194ecc7a",
    "metadata": {
     "execution": {
@@ -584,34 +561,23 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🏗️ Đang dựng lại kiến trúc model...\n",
-      "⏳ Loading weights từ /kaggle/input/transformer-training-vi2en/transformer_small_vi2en_v2.pt...\n",
-      "✅ Model đã sẵn sàng chiến đấu!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 4. Load Model\n",
-    "# (Copy lại class Encoder, Decoder, Transformer, MultiHeadAttention... vào cell trên nhé)\n",
-    "print(\"🏗️ Đang dựng lại kiến trúc model...\")\n",
+    "print(\"Đang dựng lại kiến trúc model\")\n",
     "enc = Encoder(VOCAB_SIZE, D_MODEL, N_HEAD, D_FF, N_LAYERS, MAX_LEN, DROP_PROB, device)\n",
     "dec = Decoder(VOCAB_SIZE, D_MODEL, N_HEAD, D_FF, N_LAYERS, MAX_LEN, DROP_PROB, device)\n",
     "model = Transformer(enc, dec, PAD_IDX, PAD_IDX, device).to(device)\n",
     "\n",
-    "print(f\"⏳ Loading weights từ {MODEL_PATH}...\")\n",
+    "print(f\"Loading weights từ {MODEL_PATH}\")\n",
     "model.load_state_dict(torch.load(MODEL_PATH, map_location=device))\n",
     "model.eval()\n",
-    "print(\"✅ Model đã sẵn sàng chiến đấu!\")"
+    "print(\"Model đã sẵn sàng chiến đấu!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "507a084a",
    "metadata": {
     "execution": {
@@ -629,16 +595,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📂 Đã load 1268 dòng raw.\n",
-      "✅ Data Test đã được Clean và Load thành công!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from torch.utils.data import Dataset, DataLoader\n",
@@ -648,7 +605,7 @@
     "import re\n",
     "import unicodedata\n",
     "\n",
-    "# --- 1. ĐỊNH NGHĨA HÀM CLEAN (Copy y nguyên logic cũ) ---\n",
+    "# --- 1. ĐỊNH NGHĨA HÀM CLEAN  ---\n",
     "def clean_text_final(text):\n",
     "    if not isinstance(text, str): return \"\"\n",
     "    \n",
@@ -693,7 +650,7 @@
     "        with open(trg_file, 'r', encoding='utf-8') as f:\n",
     "            self.trg_lines = f.readlines()\n",
     "            \n",
-    "        print(f\"📂 Đã load {len(self.src_lines)} dòng raw.\")\n",
+    "        print(f\"Đã load {len(self.src_lines)} dòng raw.\")\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.src_lines)\n",
@@ -703,7 +660,7 @@
     "        raw_src = self.src_lines[idx]\n",
     "        raw_trg = self.trg_lines[idx]\n",
     "        \n",
-    "        # --- BƯỚC QUAN TRỌNG: CLEAN DATA TRƯỚC ---\n",
+    "        # --- CLEAN DATA TRƯỚC ---\n",
     "        clean_src = clean_text_final(raw_src)\n",
     "        clean_trg = clean_text_final(raw_trg) # Clean cả target để tính BLEU cho chuẩn\n",
     "        \n",
@@ -730,12 +687,12 @@
     "test_dataset = RawTestDataset(TEST_SRC_RAW, TEST_TRG_RAW, sp)\n",
     "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False, collate_fn=collate_fn)\n",
     "\n",
-    "print(\"✅ Data Test đã được Clean và Load thành công!\")"
+    "print(\"Data Test đã được Clean và Load thành công!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "adceaa0a",
    "metadata": {
     "execution": {
@@ -753,39 +710,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⏳ Đang chạy BEAM SEARCH (k=3, max_len=128)...\n",
-      "⚠️ Cảnh báo: Sẽ mất khoảng 30-45 phút. Đừng tắt trình duyệt!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Beam Decoding: 100%|██████████| 40/40 [23:06<00:00, 34.67s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "🚀 Đang tính toán TER và METEOR...\n",
-      "⏳ Đang tính METEOR (NLTK)...\n",
-      "\n",
-      "==================================================\n",
-      "📊 KẾT QUẢ BỔ SUNG (BEAM SEARCH k=3)\n",
-      "--------------------------------------------------\n",
-      "🔹 TER    : 59.65  (Càng THẤP càng tốt)\n",
-      "🔹 METEOR : 56.36  (Càng CAO càng tốt)\n",
-      "==================================================\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn.functional as F\n",
@@ -801,7 +726,7 @@
     "nltk.download('omw-1.4', quiet=True)\n",
     "\n",
     "# ==============================================================================\n",
-    "# PHẦN 1: BEAM SEARCH DECODE (Giữ nguyên cấu hình k=3, max_len=128)\n",
+    "# PHẦN 1: BEAM SEARCH DECODE \n",
     "# ==============================================================================\n",
     "def beam_search_decode(model, src, sp, device, max_len=128, beam_size=3, alpha=0.7):\n",
     "    model.eval()\n",
@@ -858,8 +783,8 @@
     "    hypotheses = []\n",
     "    references = []\n",
     "    \n",
-    "    print(f\"⏳ Đang chạy BEAM SEARCH (k={beam_size}, max_len={max_len})...\")\n",
-    "    print(\"⚠️ Cảnh báo: Sẽ mất khoảng 30-45 phút. Đừng tắt trình duyệt!\")\n",
+    "    print(f\"Đang chạy BEAM SEARCH (k={beam_size}, max_len={max_len})...\")\n",
+    "    print(\"Cảnh báo: Sẽ mất khoảng 30-45 phút. Đừng tắt trình duyệt!\")\n",
     "    \n",
     "    with torch.no_grad():\n",
     "        for src, trg in tqdm(data_loader, desc=\"Beam Decoding\", mininterval=30):\n",
@@ -890,7 +815,7 @@
     "# PHẦN 3: CHỈ TÍNH TER VÀ METEOR\n",
     "# ==============================================================================\n",
     "def calculate_ter_meteor(hypotheses, references):\n",
-    "    print(\"\\n🚀 Đang tính toán TER và METEOR...\")\n",
+    "    print(\"\\nĐang tính toán TER và METEOR...\")\n",
     "    \n",
     "    # 1. Tính TER (Translation Edit Rate)\n",
     "    # TER thấp = Tốt\n",
@@ -898,7 +823,7 @@
     "    \n",
     "    # 2. Tính METEOR\n",
     "    # METEOR cao = Tốt\n",
-    "    print(\"⏳ Đang tính METEOR (NLTK)...\")\n",
+    "    print(\"Đang tính METEOR (NLTK)...\")\n",
     "    meteor_scores = []\n",
     "    for hyp, ref in zip(hypotheses, references):\n",
     "        # NLTK yêu cầu list các từ (tokenized list)\n",
@@ -910,7 +835,7 @@
     "    final_meteor = (sum(meteor_scores) / len(meteor_scores)) * 100\n",
     "\n",
     "    print(\"\\n\" + \"=\"*50)\n",
-    "    print(\"📊 KẾT QUẢ BỔ SUNG (BEAM SEARCH k=3)\")\n",
+    "    print(\"KẾT QUẢ BỔ SUNG (BEAM SEARCH k=3)\")\n",
     "    print(\"-\" * 50)\n",
     "    print(f\"🔹 TER    : {ter.score:.2f}  (Càng THẤP càng tốt)\")\n",
     "    print(f\"🔹 METEOR : {final_meteor:.2f}  (Càng CAO càng tốt)\")\n",
@@ -933,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "77d72be7",
    "metadata": {
     "execution": {
@@ -1041,8 +966,7 @@
     "#     hypotheses = []\n",
     "#     references = []\n",
     "    \n",
-    "#     print(f\"⏳ Đang chạy BEAM SEARCH (k={beam_size}) trên {len(data_loader.dataset)} câu...\")\n",
-    "#     print(\"⚠️ Cảnh báo: Quá trình này sẽ mất khoảng 30-45 phút. Vui lòng kiên nhẫn...\")\n",
+    "#     print(f\"Đang chạy BEAM SEARCH (k={beam_size}) trên {len(data_loader.dataset)} câu...\")\n",
     "    \n",
     "#     with torch.no_grad():\n",
     "#         for src, trg in tqdm(data_loader, desc=\"Beam Decoding\", mininterval=30):\n",
@@ -1075,14 +999,14 @@
     "                \n",
     "#                 hypotheses.append(sp.decode_ids(best_seq))\n",
     "                \n",
-    "#     print(f\"✅ Đã trích xuất xong {len(hypotheses)} câu bằng Beam Search.\")\n",
+    "#     print(f\"Đã trích xuất xong {len(hypotheses)} câu bằng Beam Search.\")\n",
     "#     return sources, hypotheses, references\n",
     "\n",
     "# # ==============================================================================\n",
     "# # PHẦN 3: TÍNH ĐIỂM (Không thay đổi)\n",
     "# # ==============================================================================\n",
     "# def calculate_all_metrics(sources, hypotheses, references):\n",
-    "#     print(\"\\n🚀 Đang tính toán các chỉ số đánh giá (BLEU, chrF, COMET)...\")\n",
+    "#     print(\"\\nĐang tính toán các chỉ số đánh giá (BLEU, chrF, COMET)...\")\n",
     "    \n",
     "#     # 1. BLEU\n",
     "#     bleu = sacrebleu.corpus_bleu(hypotheses, [references])\n",
@@ -1090,7 +1014,7 @@
     "#     chrf = sacrebleu.corpus_chrf(hypotheses, [references])\n",
     "    \n",
     "#     # 3. COMET\n",
-    "#     print(\"⏳ Đang tải model COMET...\")\n",
+    "#     print(\"Đang tải model COMET...\")\n",
     "#     torch.cuda.empty_cache(); gc.collect()\n",
     "    \n",
     "#     comet_score = 0\n",
@@ -1099,19 +1023,19 @@
     "#         model_comet = load_from_checkpoint(model_path)\n",
     "#         data = [{\"src\": s, \"mt\": h, \"ref\": r} for s, h, r in zip(sources, hypotheses, references)]\n",
     "        \n",
-    "#         print(\"⏳ Đang chấm điểm COMET...\")\n",
+    "#         print(\"Đang chấm điểm COMET...\")\n",
     "#         # batch_size=32 an toàn cho VRAM 16GB, nếu lỗi giảm xuống 16 hoặc 8\n",
     "#         output = model_comet.predict(data, batch_size=32, gpus=1) \n",
     "#         comet_score = output.system_score * 100\n",
     "#     except Exception as e:\n",
-    "#         print(f\"⚠️ Lỗi COMET: {e}\")\n",
+    "#         print(f\"Lỗi COMET: {e}\")\n",
     "\n",
     "#     print(\"\\n\" + \"=\"*50)\n",
-    "#     print(\"🏆 FINAL RESULTS (BEAM SEARCH k=3)\")\n",
+    "#     print(\"FINAL RESULTS (BEAM SEARCH k=3)\")\n",
     "#     print(\"-\" * 50)\n",
-    "#     print(f\"🔹 BLEU  : {bleu.score:.2f}\")\n",
-    "#     print(f\"🔹 chrF  : {chrf.score:.2f}\")\n",
-    "#     print(f\"🔹 COMET : {comet_score:.2f}\")\n",
+    "#     print(f\"BLEU  : {bleu.score:.2f}\")\n",
+    "#     print(f\"chrF  : {chrf.score:.2f}\")\n",
+    "#     print(f\"COMET : {comet_score:.2f}\")\n",
     "#     print(\"=\"*50)\n",
     "\n",
     "# # ==============================================================================\n",
@@ -1121,8 +1045,8 @@
     "# # 1. Chạy Beam Search để lấy dữ liệu (Lâu nhất ở bước này)\n",
     "# src_texts, hyp_texts, ref_texts = generate_translations_beam(\n",
     "#     model, test_loader, sp, device, \n",
-    "#     beam_size=1,  # Bạn có thể tăng lên 5 nếu muốn, nhưng sẽ chậm hơn\n",
-    "#     max_len=128   # Giữ nguyên 150 như bạn đã test lúc nãy\n",
+    "#     beam_size=1,  \n",
+    "#     max_len=128  \n",
     "# )\n",
     "\n",
     "# # 2. Tính điểm\n",
@@ -1131,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "f8f44cf4",
    "metadata": {
     "execution": {
@@ -1164,7 +1088,7 @@
     "#     hypotheses = []\n",
     "#     references = []\n",
     "    \n",
-    "#     print(\"⏳ Đang dịch và tính SacreBLEU (Chờ chút nhé)...\")\n",
+    "#     print(\"Đang dịch và tính SacreBLEU (Chờ chút nhé)...\")\n",
     "    \n",
     "#     with torch.no_grad():\n",
     "#         for src, trg in tqdm(data_loader, desc=\"Decoding\", mininterval=30):\n",
@@ -1220,13 +1144,13 @@
     "# bleu_score = calculate_sacrebleu(model, test_loader, sp, device)\n",
     "\n",
     "# print(f\"\\n\" + \"=\"*40)\n",
-    "# print(f\"🌟 SACREBLEU SCORE: {bleu_score:.2f}\")\n",
+    "# print(f\"SACREBLEU SCORE: {bleu_score:.2f}\")\n",
     "# print(f\"=\"*40)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "bb05d229",
    "metadata": {
     "execution": {
@@ -1347,8 +1271,8 @@
     "#     hypotheses = []\n",
     "#     references = []\n",
     "    \n",
-    "#     print(f\"⏳ Đang chạy Beam Search (k={beam_size}, max_len={max_len}) trên toàn bộ tập Test...\")\n",
-    "#     print(\"⚠️ Cảnh báo: Beam Search chạy chậm hơn Greedy khoảng 3-5 lần (Mất khoảng 30-45 phút)...\")\n",
+    "#     print(f\"Đang chạy Beam Search (k={beam_size}, max_len={max_len}) trên toàn bộ tập Test...\")\n",
+    "#     print(\"Cảnh báo: Beam Search chạy chậm hơn Greedy khoảng 3-5 lần (Mất khoảng 30-45 phút)...\")\n",
     "    \n",
     "#     with torch.no_grad():\n",
     "#         # Mininterval=30 để log đỡ bị spam, 30s cập nhật 1 lần\n",
@@ -1389,18 +1313,17 @@
     "#                 hypotheses.append(pred_text)\n",
     "                \n",
     "#     # --- C. Tính điểm ---\n",
-    "#     print(\"\\n✅ Decoding hoàn tất! Đang tính BLEU...\")\n",
+    "#     print(\"\\nDecoding hoàn tất! Đang tính BLEU...\")\n",
     "#     score = sacrebleu.corpus_bleu(hypotheses, [references])\n",
     "#     return score.score\n",
     "\n",
     "# # ==========================================\n",
     "# # --- CHẠY THÔI ---\n",
     "# # ==========================================\n",
-    "# # Lưu ý: Chắc chắn bạn đã load model ngon lành cành đào\n",
     "# final_beam_bleu = calculate_bleu_beam_search(model, test_loader, sp, device, beam_size=3, max_len=128)\n",
     "\n",
     "# print(f\"\\n\" + \"=\"*40)\n",
-    "# print(f\"🔥 FINAL BEAM SEARCH BLEU: {final_beam_bleu:.2f}\")\n",
+    "# print(f\"FINAL BEAM SEARCH BLEU: {final_beam_bleu:.2f}\")\n",
     "# print(f\"=\"*40)"
    ]
   }
