--- a/NLP/Bai1/Training/transformer-training-en2vi.ipynb
+++ b/NLP/Bai1/Training/transformer-training-en2vi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6432a83d",
    "metadata": {
     "execution": {
@@ -20,16 +20,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vocab Size loaded: 16000\n",
-      "Device: cuda\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -42,7 +33,6 @@
     "import os\n",
     "from tqdm import tqdm\n",
     "\n",
-    "# --- CẤU HÌNH ĐƯỜNG DẪN (SỬA LẠI CHỖ NÀY) ---\n",
     "# Thư mục chứa các file: train.bpe.en, train.bpe.vi, iwslt_bpe.model\n",
     "INPUT_DIR = \"/kaggle/input/iwslt-dataprocessing\" \n",
     "BPE_MODEL_PATH = '/kaggle/input/tokenizer-iwslt/iwslt_bpe.model'\n",
@@ -50,7 +40,6 @@
     "# Các file dữ liệu (Đã tokenize BPE ở bước trước)\n",
     "TRAIN_SRC_FILE = '/kaggle/input/tokenizer-iwslt/train.bpe.en'\n",
     "TRAIN_TRG_FILE = '/kaggle/input/tokenizer-iwslt/train.bpe.vi'\n",
-    "# (Tạm thời dùng train làm valid nếu bạn chưa tạo file valid.bpe riêng)\n",
     "VAL_SRC_FILE =  '/kaggle/input/tokenizer-iwslt/valid.bpe.en'\n",
     "VAL_TRG_FILE = '/kaggle/input/tokenizer-iwslt/valid.bpe.vi'\n",
     "\n",
@@ -81,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8a810586",
    "metadata": {
     "execution": {
@@ -140,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e35087e7",
    "metadata": {
     "execution": {
@@ -175,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "dd5a0b3a",
    "metadata": {
     "execution": {
@@ -193,25 +182,13 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🔄 Đang khởi tạo Train Loader...\n",
-      "⏳ Đang đọc dữ liệu từ: train.bpe.en & train.bpe.vi...\n",
-      "🔄 Đang khởi tạo Valid Loader...\n",
-      "⏳ Đang đọc dữ liệu từ: valid.bpe.en & valid.bpe.vi...\n",
-      "✅ Đã sẵn sàng! Train size: 128068, Valid size: 1553\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# --- KHỞI TẠO DATASET & DATALOADER ---\n",
     "# Lấy PAD ID từ model đã load ở cell 1\n",
     "PAD_IDX = sp.pad_id() \n",
     "\n",
-    "print(\"🔄 Đang khởi tạo Train Loader...\")\n",
+    "print(\" Đang khởi tạo Train Loader...\")\n",
     "train_ds = TranslationDataset(TRAIN_SRC_FILE, TRAIN_TRG_FILE, BPE_MODEL_PATH)\n",
     "train_loader = DataLoader(\n",
     "    train_ds, \n",
@@ -221,8 +198,7 @@
     "    num_workers=2\n",
     ")\n",
     "\n",
-    "print(\"🔄 Đang khởi tạo Valid Loader...\")\n",
-    "# Lưu ý: Nếu bạn chưa có file valid riêng, dùng tạm file train (hoặc split ra)\n",
+    "print(\" Đang khởi tạo Valid Loader...\")\n",
     "# Ở đây mình demo dùng luôn file config ở cell 1\n",
     "val_ds = TranslationDataset(VAL_SRC_FILE, VAL_TRG_FILE, BPE_MODEL_PATH)\n",
     "valid_loader = DataLoader(\n",
@@ -233,12 +209,12 @@
     "    num_workers=2\n",
     ")\n",
     "\n",
-    "print(f\"✅ Đã sẵn sàng! Train size: {len(train_ds)}, Valid size: {len(val_ds)}\")"
+    "print(f\" Đã sẵn sàng! Train size: {len(train_ds)}, Valid size: {len(val_ds)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "23c20891",
    "metadata": {
     "execution": {
@@ -277,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ac405be9",
    "metadata": {
     "execution": {
@@ -319,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e89086e2",
    "metadata": {
     "execution": {
@@ -399,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "dba388c1",
    "metadata": {
     "execution": {
@@ -439,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "3fcba735",
    "metadata": {
     "execution": {
@@ -489,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "afe6b294",
    "metadata": {
     "execution": {
@@ -536,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "535f5f13",
    "metadata": {
     "execution": {
@@ -611,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "02a471f5",
    "metadata": {
     "execution": {
@@ -661,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "f0716058",
    "metadata": {
     "execution": {
@@ -741,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "af9de643",
    "metadata": {
     "execution": {
@@ -759,16 +735,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🚀 Khởi tạo Model MỚI (Train from scratch)...\n",
-      "📊 Tổng số tham số (Trainable Parameters): 19,676,800\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def initialize_weights(m):\n",
     "    \"\"\"\n",
@@ -778,7 +745,7 @@
     "    if hasattr(m, 'weight') and m.weight.dim() > 1:\n",
     "        nn.init.xavier_uniform_(m.weight.data)\n",
     "\n",
-    "print(\"🚀 Khởi tạo Model MỚI (Train from scratch)...\")\n",
+    "print(\" Khởi tạo Model MỚI (Train from scratch)...\")\n",
     "\n",
     "# 1. Khởi tạo các thành phần\n",
     "enc = Encoder(INPUT_DIM, D_MODEL, N_HEAD, D_FF, N_LAYERS, MAX_LEN, DROP_PROB, device)\n",
@@ -790,18 +757,18 @@
     "\n",
     "# 3. Áp dụng khởi tạo trọng số (QUAN TRỌNG)\n",
     "# model.apply(initialize_weights)\n",
-    "# print(\"✨ Đã khởi tạo tham số ngẫu nhiên (Xavier Init).\")\n",
+    "# print(\" Đã khởi tạo tham số ngẫu nhiên (Xavier Init).\")\n",
     "\n",
     "# 4. Kiểm tra số lượng tham số\n",
     "def count_parameters(model):\n",
     "    return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
     "\n",
-    "print(f\"📊 Tổng số tham số (Trainable Parameters): {count_parameters(model):,}\")"
+    "print(f\" Tổng số tham số (Trainable Parameters): {count_parameters(model):,}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "ad3f1353",
    "metadata": {
     "execution": {
@@ -830,8 +797,7 @@
     "# VOCAB_SIZE = sp.get_piece_size()\n",
     "# PAD_IDX = sp.pad_id()\n",
     "\n",
-    "# # 👇 DÒNG BẠN HỎI LÀ Ở ĐÂY. BẮT BUỘC PHẢI CÓ!\n",
-    "# print(\"🏗️ Đang xây dựng kiến trúc Model...\")\n",
+    "# print(\"Đang xây dựng kiến trúc Model...\")\n",
     "# enc = Encoder(VOCAB_SIZE, D_MODEL, N_HEAD, D_FF, N_LAYERS, MAX_LEN, DROP_PROB, device)\n",
     "# dec = Decoder(VOCAB_SIZE, D_MODEL, N_HEAD, D_FF, N_LAYERS, MAX_LEN, DROP_PROB, device)\n",
     "# model = Transformer(enc, dec, PAD_IDX, PAD_IDX, device).to(device)"
@@ -839,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "fd61006c",
    "metadata": {
     "execution": {
@@ -857,33 +823,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🔄 Loading weights from /kaggle/input/transformer-training-en2vi/transformer_best_en2vi_finetunedV2.pt...\n",
-      "🚀 Bắt đầu Train thêm 10 epochs (No Progress Bar)...\n",
-      "Epoch | Train Loss |  Val Loss  |  Val PPL   |    Time   \n",
-      "-------------------------------------------------------\n",
-      "  1   |   3.215    |   3.405    |   30.115   | 3m 53s\n",
-      "      --> 💾 Saved Best V2 (Loss: 3.405)\n",
-      "  2   |   3.189    |   3.400    |   29.951   | 3m 52s\n",
-      "      --> 💾 Saved Best V2 (Loss: 3.400)\n",
-      "  3   |   3.178    |   3.395    |   29.810   | 3m 52s\n",
-      "      --> 💾 Saved Best V2 (Loss: 3.395)\n",
-      "  4   |   3.173    |   3.390    |   29.662   | 3m 52s\n",
-      "      --> 💾 Saved Best V2 (Loss: 3.390)\n",
-      "  5   |   3.170    |   3.399    |   29.937   | 3m 53s\n",
-      "  6   |   3.168    |   3.397    |   29.879   | 3m 52s\n",
-      "  7   |   3.168    |   3.395    |   29.827   | 3m 52s\n",
-      "  8   |   3.167    |   3.392    |   29.719   | 3m 51s\n",
-      "  9   |   3.167    |   3.393    |   29.752   | 3m 52s\n",
-      " 10   |   3.168    |   3.396    |   29.857   | 3m 53s\n",
-      "✅ DONE FINE-TUNING!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "import time\n",
@@ -914,7 +854,7 @@
     "# 3. Reset Best Loss (Lấy mốc của model cũ, ví dụ 3.4 hoặc 3.5)\n",
     "best_valid_loss = 3.5 \n",
     "\n",
-    "print(f\"🚀 Bắt đầu Train thêm {EXTRA_EPOCHS} epochs (No Progress Bar)...\")\n",
+    "print(f\" Bắt đầu Train thêm {EXTRA_EPOCHS} epochs (No Progress Bar)...\")\n",
     "print(f\"{'Epoch':^5} | {'Train Loss':^10} | {'Val Loss':^10} | {'Val PPL':^10} | {'Time':^10}\")\n",
     "print(\"-\" * 55)\n",
     "\n",
@@ -943,7 +883,6 @@
     "        train_loss += loss.item()\n",
     "\n",
     "    # --- EVALUATE ---\n",
-    "    # (Đảm bảo bạn có hàm evaluate trả về loss trung bình)\n",
     "    valid_loss = evaluate(model, valid_loader, criterion)\n",
     "    \n",
     "    # Tính toán chỉ số\n",
@@ -959,9 +898,9 @@
     "    if valid_loss < best_valid_loss:\n",
     "        best_valid_loss = valid_loss\n",
     "        torch.save(model.state_dict(), NEW_SAVE_PATH)\n",
-    "        print(f\"      --> 💾 Saved Best V2 (Loss: {valid_loss:.3f})\")\n",
+    "        print(f\"      -->  Saved Best V2 (Loss: {valid_loss:.3f})\")\n",
     "\n",
-    "print(\"✅ DONE FINE-TUNING!\")"
+    "print(\"DONE FINE-TUNING!\")"
    ]
   }
  ],
