--- a/NLP/Bai2/Data_Processing/transformer-medical-dataprocessing.ipynb
+++ b/NLP/Bai2/Data_Processing/transformer-medical-dataprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "89336ed7",
    "metadata": {
     "execution": {
@@ -20,33 +20,14 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting langdetect\r\n",
-      "  Downloading langdetect-1.0.9.tar.gz (981 kB)\r\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m981.5/981.5 kB\u001b[0m \u001b[31m18.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\r\n",
-      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\r\n",
-      "Requirement already satisfied: six in /usr/local/lib/python3.11/dist-packages (from langdetect) (1.17.0)\r\n",
-      "Building wheels for collected packages: langdetect\r\n",
-      "  Building wheel for langdetect (setup.py) ... \u001b[?25l\u001b[?25hdone\r\n",
-      "  Created wheel for langdetect: filename=langdetect-1.0.9-py3-none-any.whl size=993223 sha256=0a074fcc49ae176df4c60169f76f8e3104626d093cba17978addc53eb8851b29\r\n",
-      "  Stored in directory: /root/.cache/pip/wheels/0a/f2/b2/e5ca405801e05eb7c8ed5b3b4bcf1fcabcd6272c167640072e\r\n",
-      "Successfully built langdetect\r\n",
-      "Installing collected packages: langdetect\r\n",
-      "Successfully installed langdetect-1.0.9\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install langdetect"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "abc2f2c3",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -98,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "aa51c4eb",
    "metadata": {
     "execution": {
@@ -197,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ab81a175",
    "metadata": {
     "execution": {
@@ -215,42 +196,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1. Đang Load và ÁP DỤNG PREPROCESSING LẦN 1 (Xóa URL/Control Chars)...\n",
-      "   -> Số lượng sau khi làm sạch sơ bộ: 500000\n",
-      "2. LỌC: Xóa Trùng Lặp & Tiếng Việt trong cột En...\n",
-      "   -> Số lượng sau khi xóa trùng và lọc VN trong En: 346379\n",
-      "3. LỌC: LangDetect, Ratio và Độ dài...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7291d431acca4ad08d27d07b39456aaf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/346379 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "4. CHỐT SỔ: SỐ LƯỢNG CẶP SẠCH CUỐI CÙNG: 344426\n",
-      "   -> Bắt đầu train Tokenizer...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# --- 3. PIPELINE EXECUTION ---\n",
     "\n",
@@ -304,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3e498ffe",
    "metadata": {
     "execution": {
@@ -322,27 +268,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "   -> Vocab En: 32000, Vocab Vi: 32000\n",
-      "\n",
-      "=======================================================\n",
-      "🎉 HOÀN TẤT NOTEBOOK 1! DỮ LIỆU ĐÃ SẠCH TUYỆT ĐỐI! 🎉\n",
-      "   Dữ liệu sạch đã lưu tại: vlsp_medical_cleaned_final.csv\n",
-      "   Tokenizer đã lưu tại: tokenizer_files/...\n",
-      "=======================================================\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# --- 4. TRAIN TOKENIZER & LƯU TRỮ ---\n",
     "\n",
@@ -359,7 +285,7 @@
     "tgt_tokenizer.save(os.path.join(TOKENIZER_DIR, \"vi_tokenizer.json\"))\n",
     "\n",
     "print(\"\\n=======================================================\")\n",
-    "print(f\"🎉 HOÀN TẤT NOTEBOOK 1! DỮ LIỆU ĐÃ SẠCH TUYỆT ĐỐI! 🎉\")\n",
+    "print(f\" HOÀN TẤT NOTEBOOK 1! DỮ LIỆU ĐÃ SẠCH TUYỆT ĐỐI! 🎉\")\n",
     "print(f\"   Dữ liệu sạch đã lưu tại: {FINAL_DATA_PATH}\")\n",
     "print(f\"   Tokenizer đã lưu tại: {TOKENIZER_DIR}/...\")\n",
     "print(\"=======================================================\")"
@@ -367,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7b0578cb",
    "metadata": {
     "execution": {
@@ -385,20 +311,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "--- KẾT QUẢ QC CUỐI CÙNG ---\n",
-      "✅ Đã xóa 0 dòng bị trùng lặp.\n",
-      "✅ Đã xóa 0 dòng có Ratio > 5.0.\n",
-      "TỔNG SỐ DÒNG ĐÃ XÓA TRONG QC: 0\n",
-      "SỐ LƯỢNG DỮ LIỆU SẠCH TUYỆT ĐỐI: 344426 dòng.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# @title 5. KIỂM TRA VÀ LÀM SẠCH LẦN CUỐI (QC CHỐT SỔ)\n",
     "# Sử dụng df_final vừa được tạo ra để đảm bảo dữ liệu mới nhất\n",
@@ -418,7 +331,7 @@
     "num_extreme_ratio = extreme_ratio_filter.sum()\n",
     "\n",
     "if num_extreme_ratio > 0:\n",
-    "    print(f\"🚩 PHÁT HIỆN LỖI: {num_extreme_ratio} dòng có tỷ lệ Vi/En > 5.0. Đang loại bỏ...\")\n",
+    "    print(f\" PHÁT HIỆN LỖI: {num_extreme_ratio} dòng có tỷ lệ Vi/En > 5.0. Đang loại bỏ...\")\n",
     "    df_qc = df_qc[~extreme_ratio_filter]\n",
     "    \n",
     "# --- C. BÁO CÁO & CẬP NHẬT LIST ---\n",
@@ -426,8 +339,8 @@
     "final_clean_count = len(df_qc)\n",
     "\n",
     "print(\"\\n--- KẾT QUẢ QC CUỐI CÙNG ---\")\n",
-    "print(f\"✅ Đã xóa {duplicates_removed} dòng bị trùng lặp.\")\n",
-    "print(f\"✅ Đã xóa {num_extreme_ratio} dòng có Ratio > 5.0.\")\n",
+    "print(f\"Đã xóa {duplicates_removed} dòng bị trùng lặp.\")\n",
+    "print(f\"Đã xóa {num_extreme_ratio} dòng có Ratio > 5.0.\")\n",
     "print(f\"TỔNG SỐ DÒNG ĐÃ XÓA TRONG QC: {removed_total}\")\n",
     "print(f\"SỐ LƯỢNG DỮ LIỆU SẠCH TUYỆT ĐỐI: {final_clean_count} dòng.\")\n",
     "\n",
@@ -679,13 +592,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_bd977c2f34a94cd19ffa888f9c908f00",
-       "max": 346379.0,
-       "min": 0.0,
+       "max": 346379,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_a16d140304b340b1ab62249e2472afc0",
        "tabbable": null,
        "tooltip": null,
-       "value": 346379.0
+       "value": 346379
       }
      },
      "6a82843e4d8246d68f068cf7c08f27b5": {
