--- a/NLP/Bai2/Testing/medical-test-vi2en.ipynb
+++ b/NLP/Bai2/Testing/medical-test-vi2en.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9370cfd7",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "eb028371",
    "metadata": {
     "execution": {
@@ -54,46 +54,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🦥 Unsloth: Will patch your computer to enable 2x faster free finetuning.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-12-18 13:50:43.052035: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1766065843.527483      24 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1766065843.644706      24 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "W0000 00:00:1766065844.762469      24 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1766065844.762515      24 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1766065844.762518      24 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1766065844.762521      24 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🦥 Unsloth Zoo will now patch everything to make training faster!\n",
-      "Unsloth: Could not import trl.trainer.alignprop_trainer: Failed to import trl.trainer.alignprop_trainer because of the following error (look up to see its traceback):\n",
-      "Failed to import trl.models.modeling_sd_base because of the following error (look up to see its traceback):\n",
-      "Failed to import diffusers.pipelines.stable_diffusion.pipeline_stable_diffusion because of the following error (look up to see its traceback):\n",
-      "Failed to import diffusers.loaders.ip_adapter because of the following error (look up to see its traceback):\n",
-      "/usr/local/lib/python3.12/dist-packages/xformers/flash_attn_3/_C.so: undefined symbol: _ZNK3c106SymInt22maybe_as_int_slow_pathEv\n",
-      "Unsloth: Could not import trl.trainer.ddpo_trainer: Failed to import trl.trainer.ddpo_trainer because of the following error (look up to see its traceback):\n",
-      "Failed to import trl.models.modeling_sd_base because of the following error (look up to see its traceback):\n",
-      "Failed to import diffusers.pipelines.stable_diffusion.pipeline_stable_diffusion because of the following error (look up to see its traceback):\n",
-      "Failed to import diffusers.loaders.ip_adapter because of the following error (look up to see its traceback):\n",
-      "/usr/local/lib/python3.12/dist-packages/xformers/flash_attn_3/_C.so: undefined symbol: _ZNK3c106SymInt22maybe_as_int_slow_pathEv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import torch\n",
@@ -122,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2c59589b",
    "metadata": {
     "execution": {
@@ -140,66 +101,10 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⏳ Đang tải model từ: /kaggle/input/cp-vi2en/outputs-phase2/checkpoint-2000...\n",
-      "==((====))==  Unsloth 2025.12.6: Fast Qwen3 patching. Transformers: 4.55.4.\n",
-      "   \\\\   /|    Tesla T4. Num GPUs = 2. Max memory: 14.741 GB. Platform: Linux.\n",
-      "O^O/ \\_/ \\    Torch: 2.8.0+cu126. CUDA: 7.5. CUDA Toolkit: 12.6. Triton: 3.4.0\n",
-      "\\        /    Bfloat16 = FALSE. FA [Xformers = None. FA2 = False]\n",
-      " \"-____-\"     Free license: http://github.com/unslothai/unsloth\n",
-      "Unsloth: Fast downloading is enabled - ignore downloading bars which are red colored!\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8dcddbec7a85473e8cf5342c5d0501e0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/1.41G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4977f1166cb9420892d5607bf070ad3a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "generation_config.json:   0%|          | 0.00/237 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Unsloth 2025.12.6 patched 28 layers with 0 QKV layers, 0 O layers and 0 MLP layers.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Model đã sẵn sàng cho Inference!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#--- 1. LOAD MODEL VÀ ADAPTERS ---\n",
-    "print(f\"⏳ Đang tải model từ: {CHECKPOINT_PATH}...\")\n",
+    "print(f\"Đang tải model từ: {CHECKPOINT_PATH}...\")\n",
     "model, tokenizer = FastLanguageModel.from_pretrained(\n",
     "    model_name = CHECKPOINT_PATH, \n",
     "    max_seq_length = max_seq_length,\n",
@@ -208,12 +113,12 @@
     "    device_map = \"cuda:0\",\n",
     ")\n",
     "FastLanguageModel.for_inference(model)\n",
-    "print(\"✅ Model đã sẵn sàng cho Inference!\")"
+    "print(\"Model đã sẵn sàng cho Inference!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "083aef21",
    "metadata": {
     "execution": {
@@ -231,16 +136,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "📚 Đang load và làm sạch Public Test...\n",
-      "✅ Đã load 3000 câu Test (sẵn sàng tính toán).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# --- 2. LOAD VÀ LÀM SẠCH DATA ---\n",
     "def preprocess_text(text):\n",
@@ -253,19 +149,19 @@
     "    text = re.sub(r'\\s+', ' ', text).strip()\n",
     "    return text\n",
     "\n",
-    "print(\"📚 Đang load và làm sạch Public Test...\")\n",
+    "print(\" Đang load và làm sạch Public Test...\")\n",
     "with open(TEST_EN_PATH, 'r', encoding='utf-8') as f: en_data = [preprocess_text(l) for l in f]\n",
     "with open(TEST_VI_PATH, 'r', encoding='utf-8') as f: vi_data = [preprocess_text(l) for l in f]\n",
     "\n",
     "# Reference phải là list of list cho sacrebleu\n",
     "en_references = [[l.strip()] for l in en_data]\n",
     "vi_references = [[l.strip()] for l in vi_data]\n",
-    "print(f\"✅ Đã load {len(en_data)} câu Test (sẵn sàng tính toán).\")"
+    "print(f\" Đã load {len(en_data)} câu Test (sẵn sàng tính toán).\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a8a70d2b",
    "metadata": {
     "execution": {
@@ -283,24 +179,9 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "============================================================\n",
-      "📊 BẮT ĐẦU TÍNH BLEU SCORE (VI-EN SPECIALIST)\n",
-      "============================================================\n",
-      "🚀 Bắt đầu dịch vi_en (Batch size: 32)...\n",
-      "   -> Đã dịch vi_en: 3000/3000 câu...\r\n",
-      "\n",
-      "🎯 KẾT QUẢ BLEU SCORE (VIỆT -> ANH): 32.66\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 🚀 PHASE 4: TÍNH BLEU SCORE CUỐI CÙNG (FINAL VERSION)\n",
+    "#  PHASE 4: TÍNH BLEU SCORE CUỐI CÙNG (FINAL VERSION)\n",
     "# ==============================================================================\n",
     "import sacrebleu\n",
     "import torch\n",
@@ -324,7 +205,7 @@
     "    hypotheses = []\n",
     "    model.eval()\n",
     "    \n",
-    "    print(f\"🚀 Bắt đầu dịch {direction} (Batch size: {batch_size})...\")\n",
+    "    print(f\" Bắt đầu dịch {direction} (Batch size: {batch_size})...\")\n",
     "    \n",
     "    # Duyệt qua từng batch (Ví dụ: 16 câu một lần)\n",
     "    for i in range(0, len(source_texts), batch_size):\n",
@@ -388,14 +269,14 @@
     "\n",
     "\n",
     "print(\"\\n\" + \"=\"*60)\n",
-    "print(f\"📊 BẮT ĐẦU TÍNH BLEU SCORE (VI-EN SPECIALIST)\")\n",
+    "print(f\"BẮT ĐẦU TÍNH BLEU SCORE (VI-EN SPECIALIST)\")\n",
     "print(\"=\"*60)\n",
     "\n",
     "# Chạy test\n",
     "# valid_en: List các câu tiếng Anh\n",
     "# vi_references: List các câu đáp án tiếng Việt (dạng string thuần túy: ['câu 1', 'câu 2'])\n",
     "bleu_vi_en, hypotheses_vi_en = batch_translate_and_score(vi_data, en_data, \"vi_en\", batch_size=BATCH_SIZE)\n",
-    "print(f\"\\n\\n🎯 KẾT QUẢ BLEU SCORE (VIỆT -> ANH): {bleu_vi_en:.2f}\")"
+    "print(f\"\\n\\n KẾT QUẢ BLEU SCORE (VIỆT -> ANH): {bleu_vi_en:.2f}\")"
    ]
   }
  ],
@@ -854,13 +735,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_287e5a8803d9408e85ab092a7aadad06",
-       "max": 237.0,
-       "min": 0.0,
+       "max": 237,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_6124b98da92a43caaee3741c6f0384f5",
        "tabbable": null,
        "tooltip": null,
-       "value": 237.0
+       "value": 237
       }
      },
      "ad865334c55e4a82b9c859c3c1b9de8d": {
@@ -1096,13 +977,13 @@
        "description": "",
        "description_allow_html": false,
        "layout": "IPY_MODEL_bb72cf6d33d34d7b801f1e4737973f4f",
-       "max": 1406002142.0,
-       "min": 0.0,
+       "max": 1406002142,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_ad865334c55e4a82b9c859c3c1b9de8d",
        "tabbable": null,
        "tooltip": null,
-       "value": 1406002142.0
+       "value": 1406002142
       }
      },
      "fb89699426e2454489d90af9bf1ab4f1": {
