--- a/NLP/Bai1/Training/transformer-training-vi2en.ipynb
+++ b/NLP/Bai1/Training/transformer-training-vi2en.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "04408661",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -22,16 +22,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vocab Size loaded: 16000\n",
-      "Device: cuda\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -44,7 +35,6 @@
     "import os\n",
     "from tqdm import tqdm\n",
     "\n",
-    "# --- CẤU HÌNH ĐƯỜNG DẪN (SỬA LẠI CHỖ NÀY) ---\n",
     "# Thư mục chứa các file: train.bpe.en, train.bpe.vi, iwslt_bpe.model\n",
     "INPUT_DIR = \"/kaggle/input/iwslt-dataprocessing\" \n",
     "BPE_MODEL_PATH = '/kaggle/input/tokenizer-iwslt/iwslt_bpe.model'\n",
@@ -52,7 +42,6 @@
     "# Các file dữ liệu (Đã tokenize BPE ở bước trước)\n",
     "TRAIN_SRC_FILE = '/kaggle/input/tokenizer-iwslt/train.bpe.vi'\n",
     "TRAIN_TRG_FILE = '/kaggle/input/tokenizer-iwslt/train.bpe.en'\n",
-    "# (Tạm thời dùng train làm valid nếu bạn chưa tạo file valid.bpe riêng)\n",
     "VAL_SRC_FILE =  '/kaggle/input/tokenizer-iwslt/valid.bpe.vi'\n",
     "VAL_TRG_FILE = '/kaggle/input/tokenizer-iwslt/valid.bpe.en'\n",
     "\n",
@@ -83,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4c104843",
    "metadata": {
     "execution": {
@@ -114,7 +103,7 @@
     "        self.eos_id = self.sp.eos_id()\n",
     "        self.pad_id = self.sp.pad_id()\n",
     "        \n",
-    "        print(f\"⏳ Đang đọc dữ liệu từ: {os.path.basename(src_path)} & {os.path.basename(trg_path)}...\")\n",
+    "        print(f\" Đang đọc dữ liệu từ: {os.path.basename(src_path)} & {os.path.basename(trg_path)}...\")\n",
     "        with open(src_path, 'r', encoding='utf-8') as f:\n",
     "            self.src_data = f.readlines()\n",
     "        with open(trg_path, 'r', encoding='utf-8') as f:\n",
@@ -142,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "446357b0",
    "metadata": {
     "execution": {
@@ -177,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "23a4ce95",
    "metadata": {
     "execution": {
@@ -195,25 +184,13 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🔄 Đang khởi tạo Train Loader...\n",
-      "⏳ Đang đọc dữ liệu từ: train.bpe.vi & train.bpe.en...\n",
-      "🔄 Đang khởi tạo Valid Loader...\n",
-      "⏳ Đang đọc dữ liệu từ: valid.bpe.vi & valid.bpe.en...\n",
-      "✅ Đã sẵn sàng! Train size: 128068, Valid size: 1553\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# --- KHỞI TẠO DATASET & DATALOADER ---\n",
     "# Lấy PAD ID từ model đã load ở cell 1\n",
     "PAD_IDX = sp.pad_id() \n",
     "\n",
-    "print(\"🔄 Đang khởi tạo Train Loader...\")\n",
+    "print(\"Đang khởi tạo Train Loader...\")\n",
     "train_ds = TranslationDataset(TRAIN_SRC_FILE, TRAIN_TRG_FILE, BPE_MODEL_PATH)\n",
     "train_loader = DataLoader(\n",
     "    train_ds, \n",
@@ -223,8 +200,7 @@
     "    num_workers=2\n",
     ")\n",
     "\n",
-    "print(\"🔄 Đang khởi tạo Valid Loader...\")\n",
-    "# Lưu ý: Nếu bạn chưa có file valid riêng, dùng tạm file train (hoặc split ra)\n",
+    "print(\"Đang khởi tạo Valid Loader...\")\n",
     "# Ở đây mình demo dùng luôn file config ở cell 1\n",
     "val_ds = TranslationDataset(VAL_SRC_FILE, VAL_TRG_FILE, BPE_MODEL_PATH)\n",
     "valid_loader = DataLoader(\n",
@@ -235,12 +211,12 @@
     "    num_workers=2\n",
     ")\n",
     "\n",
-    "print(f\"✅ Đã sẵn sàng! Train size: {len(train_ds)}, Valid size: {len(val_ds)}\")"
+    "print(f\"Đã sẵn sàng! Train size: {len(train_ds)}, Valid size: {len(val_ds)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "244cf33e",
    "metadata": {
     "execution": {
@@ -279,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5179acb9",
    "metadata": {
     "execution": {
@@ -321,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "19271d27",
    "metadata": {
     "execution": {
@@ -401,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "712dd5f1",
    "metadata": {
     "execution": {
@@ -441,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "bf1cf99f",
    "metadata": {
     "execution": {
@@ -491,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "109e83a9",
    "metadata": {
     "execution": {
@@ -538,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "1cf65157",
    "metadata": {
     "execution": {
@@ -613,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "ad23ead4",
    "metadata": {
     "execution": {
@@ -663,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "db62b973",
    "metadata": {
     "execution": {
@@ -743,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "2fa23828",
    "metadata": {
     "execution": {
@@ -761,16 +737,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🚀 Khởi tạo Model MỚI (Train from scratch)...\n",
-      "📊 Tổng số tham số (Trainable Parameters): 19,676,800\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def initialize_weights(m):\n",
     "    \"\"\"\n",
@@ -780,7 +747,7 @@
     "    if hasattr(m, 'weight') and m.weight.dim() > 1:\n",
     "        nn.init.xavier_uniform_(m.weight.data)\n",
     "\n",
-    "print(\"🚀 Khởi tạo Model MỚI (Train from scratch)...\")\n",
+    "print(\"Khởi tạo Model MỚI (Train from scratch)...\")\n",
     "\n",
     "# 1. Khởi tạo các thành phần\n",
     "enc = Encoder(INPUT_DIM, D_MODEL, N_HEAD, D_FF, N_LAYERS, MAX_LEN, DROP_PROB, device)\n",
@@ -792,18 +759,18 @@
     "\n",
     "# # 3. Áp dụng khởi tạo trọng số (QUAN TRỌNG)\n",
     "# model.apply(initialize_weights)\n",
-    "# print(\"✨ Đã khởi tạo tham số ngẫu nhiên (Xavier Init).\")\n",
+    "# print(\" Đã khởi tạo tham số ngẫu nhiên (Xavier Init).\")\n",
     "\n",
     "# 4. Kiểm tra số lượng tham số\n",
     "def count_parameters(model):\n",
     "    return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
     "\n",
-    "print(f\"📊 Tổng số tham số (Trainable Parameters): {count_parameters(model):,}\")"
+    "print(f\"Tổng số tham số (Trainable Parameters): {count_parameters(model):,}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "e1497561",
    "metadata": {
     "execution": {
@@ -821,33 +788,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🔄 Loading weights from /kaggle/input/transformer-training-vi2en/transformer_best_en2vi_finetunedV2.pt...\n",
-      "🚀 Bắt đầu Train thêm 10 epochs (No Progress Bar)...\n",
-      "Epoch | Train Loss |  Val Loss  |  Val PPL   |    Time   \n",
-      "-------------------------------------------------------\n",
-      "  1   |   3.377    |   3.422    |   30.615   | 3m 41s\n",
-      "      --> 💾 Saved Best V2 (Loss: 3.422)\n",
-      "  2   |   3.343    |   3.420    |   30.564   | 3m 41s\n",
-      "      --> 💾 Saved Best V2 (Loss: 3.420)\n",
-      "  3   |   3.330    |   3.408    |   30.210   | 3m 40s\n",
-      "      --> 💾 Saved Best V2 (Loss: 3.408)\n",
-      "  4   |   3.324    |   3.408    |   30.214   | 3m 41s\n",
-      "  5   |   3.319    |   3.404    |   30.073   | 3m 41s\n",
-      "      --> 💾 Saved Best V2 (Loss: 3.404)\n",
-      "  6   |   3.318    |   3.407    |   30.178   | 3m 40s\n",
-      "  7   |   3.318    |   3.405    |   30.110   | 3m 40s\n",
-      "  8   |   3.317    |   3.404    |   30.087   | 3m 40s\n",
-      "  9   |   3.318    |   3.408    |   30.190   | 3m 41s\n",
-      " 10   |   3.319    |   3.407    |   30.171   | 3m 41s\n",
-      "✅ DONE FINE-TUNING!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "import time\n",
@@ -858,7 +799,7 @@
     "EXTRA_EPOCHS = 10\n",
     "\n",
     "# 1. Load trọng số cũ\n",
-    "print(f\"🔄 Loading weights from {PRETRAINED_PATH}...\")\n",
+    "print(f\" Loading weights from {PRETRAINED_PATH}...\")\n",
     "model.load_state_dict(torch.load(PRETRAINED_PATH, map_location=device))\n",
     "\n",
     "# 2. Optimizer LR thấp & cố định (cho Fine-tuning)\n",
@@ -878,7 +819,7 @@
     "# 3. Reset Best Loss (Lấy mốc của model cũ, ví dụ 3.4 hoặc 3.5)\n",
     "best_valid_loss = 3.5 \n",
     "\n",
-    "print(f\"🚀 Bắt đầu Train thêm {EXTRA_EPOCHS} epochs (No Progress Bar)...\")\n",
+    "print(f\"Bắt đầu Train thêm {EXTRA_EPOCHS} epochs (No Progress Bar)...\")\n",
     "print(f\"{'Epoch':^5} | {'Train Loss':^10} | {'Val Loss':^10} | {'Val PPL':^10} | {'Time':^10}\")\n",
     "print(\"-\" * 55)\n",
     "\n",
@@ -907,7 +848,6 @@
     "        train_loss += loss.item()\n",
     "\n",
     "    # --- EVALUATE ---\n",
-    "    # (Đảm bảo bạn có hàm evaluate trả về loss trung bình)\n",
     "    valid_loss = evaluate(model, valid_loader, criterion)\n",
     "    \n",
     "    # Tính toán chỉ số\n",
@@ -923,9 +863,9 @@
     "    if valid_loss < best_valid_loss:\n",
     "        best_valid_loss = valid_loss\n",
     "        torch.save(model.state_dict(), NEW_SAVE_PATH)\n",
-    "        print(f\"      --> 💾 Saved Best V2 (Loss: {valid_loss:.3f})\")\n",
+    "        print(f\"      --> Saved Best V2 (Loss: {valid_loss:.3f})\")\n",
     "\n",
-    "print(\"✅ DONE FINE-TUNING!\")"
+    "print(\"DONE FINE-TUNING!\")"
    ]
   }
  ],
